@@ -19,7 +19,7 @@ endif
 CIAO_ROOT := $(subst \,/,$(CIAO_ROOT))
 
 ifndef TAO_IDL3_TO_IDL2
-  TAO_IDL3_TO_IDL2 = $(CIAO_ROOT)/tools/IDL3_TO_IDL2/tao_idl3_to_idl2
+  TAO_IDL3_TO_IDL2 = $(CIAO_ROOT)/tools/IDL3_to_IDL2/tao_idl3_to_idl2
   TAO_IDL3_TO_IDL2_DEP = $(TAO_IDL3_TO_IDL2)$(EXEEXT)
 else
 ifndef TAO_IDL3_TO_IDL2_DEP
